# llm-pytest-analyzer

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .bandit  .coverage  .gitignore  .mcp.json  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .vulture  .vulture_whitelist  .windsurfrules  404.html  CLAUDE.md  CONTEXT_MCP_SERVER_TEST.md  GUI_TESTING_GUIDE.md  LICENSE  QUICKSTART.md  README.md  TUI_MIGRATION_STATUS.md  ToDo.md  __init__.py  __main__.py  analysis_summary.md  api_reference.rst  architecture_report.md  conftest.py  debug_cli.py  debug_gui_pytest.py  debug_mcp_server.py  demo_extraction_gui.py  demo_script.py  error_handling_standardization_analysis.md  final_fix_validation.py  gui_migration_proposals.md  index.html  index.rst  memory_investigation_report.md  (+26 more)
.aider/: chat_history.md
.claude/: settings_local.json
.claude/commands/: aider_github_priming.md
.claude/state/: quality_complete_fix.json
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  self-healing-ci.yml
.taskmaster/docs/: prd.txt
DEPENDENCY_INJECTION/: index.html
analysis_reports/: final_security_audit_20250624_104937.json  security_audit_summary_20250612_205425.json  static_analysis_report_20250612_175818.json
api-user-guide/: index.html
architecture/: index.html
cli/: __init__.py  analyzer_cli.py
component_diagram/: index.html
configuration/vault-integration/: index.html
core/: analyzer_service.py
core/analysis/: failure_analyzer.py  fix_suggester.py
core/extraction/: extractor_factory.py  json_extractor.py  pytest_plugin.py  xml_extractor.py
core/models/: test_failure.py
developer-guide/: index.html
disaster-recovery/: index.html
docs/: DEPENDENCY_INJECTION.md  api-user-guide.md  architecture.md  component_diagram.md  conf.py  developer-guide.md  disaster-recovery.md  environment-managers.md  error_handling_strategy.md  extractor_refactoring.md  facade_architecture.md  facade_component_diagram.md  getting_started.rst  gui_design.md  index.md  operations-guide.md  project-retrospective.md  security-practices.md  self-dogfooding-improvements.md
docs/configuration/: vault-integration.md
docs/mcp/: index.md  installation.md
docs/project-management/: systematic-testing-improvements-prd.md
environment-managers/: index.html
error_handling_strategy/: index.html
examples/: enhanced_di_usage.py  use_llm_suggestions.py  using_facade.py
examples/hatch-project/: README.md  pyproject.toml
examples/pip-venv-project/: README.md  requirements.txt
examples/pipenv-project/: Pipfile  README.md
examples/pixi-project/: README.md  pixi.toml
examples/poetry-project/: README.md  pyproject.toml
examples/uv-project/: README.md  pyproject.toml
extractor_refactoring/: index.html
facade_architecture/: index.html
facade_component_diagram/: index.html
gui_design/: index.html
mcp/: index.html
mcp/configuration/: index.html
mcp/faq/: index.html
mcp/installation/: index.html
mcp/security/: index.html
mcp/troubleshooting/: index.html
operations-guide/: index.html
project-retrospective/: index.html
scripts/: architecture_review.py  clean_project.sh  final_security_audit.py  generate_clean_analysis_report.py  gui_enhancement_prd.txt  prd.txt  run_analyzer.py  security_audit_summary.py  static_analysis.py  task-complexity-report.json  task-workflow.sh  test_gui_features.py
search/: search_index.json
security-practices/: index.html
self-dogfooding-improvements/: index.html
src/llm_task_framework/: protocols.py
src/pytest_analyzer/: __init__.py  __main__.py  __version__.py  analyzer_service.py  py.typed
tasks/: gui_tasks.json  task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  tasks.json
tests/: __init__.py  conftest.py  di_fixtures.py  test_analyzer_service.py  test_caplog_debug.py  test_cli.py  test_debug_integration.py  test_debug_llm_auto_detect.py  test_dependency_validator.py  test_dependency_validator_simple.py  test_fix_remaining_tests.py
tests/analysis/: test_fix_applier.py  test_fix_applier_adapter.py
tests/analyzers/: __init__.py  test_composite_suggester.py  test_failure_analyzer.py  test_fix_suggester.py  test_llm_suggester.py  test_suggester_factory.py
tests/cli/: test_check_env_command.py  test_cli_di.py  test_cli_fix_integration.py  test_efficiency_report_command.py  test_nl_query_command.py  test_smart_test_command.py
tests/core/: __init__.py  test_analyzer_facade.py  test_analyzer_service_di.py  test_analyzer_service_fix_integration.py  test_analyzer_service_state_machine.py  test_analyzer_state_machine.py  test_async_analyzer.py  test_backward_compat.py  test_llm_service.py  test_llm_service_fixed.py  test_state_machine.py  test_test_executor.py
tests/e2e/: __init__.py  conftest.py  test_api_usage.py  test_cli_live_run.py
tests/extractors/: __init__.py  test_extractor_factory.py  test_extractor_protocol.py  test_json_extractor.py  test_pytest_output_extractor.py  test_pytest_plugin.py  test_xml_extractor.py
tests/gui/: README.md  __init__.py  conftest.py  test_app.py  test_full_gui_automation.py  test_main_window.py  test_qt_setup.py  test_reporting_features.py  test_utils.py
tests/integration/: test_ci_workflow.py  test_ci_workflow_simple.py  test_service_integration.py
tests/mcp/: test_apply_suggestion.py  test_facade.py  test_logging.py  test_mcp_server_rate_limiting.py  test_schemas.py  test_security.py  test_security_rate_limiting.py  test_server.py  test_server_config_integration.py  test_update_config_tool.py
tests/metrics/: test_efficiency_tracker.py
tests/performance/: __init__.py  test_benchmarking_system.py
tests/sample_reports/: assertion_fail_report.json  assertion_fail_report.xml  passing_report.json
tests/security/: test_final_audit.py
tests/tui/: __init__.py  (+3 more)
utils/: path_resolver.py  resource_manager.py  settings.py
(+395 files in other folders)
