[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-analyzer"
dynamic = ["version"]
description = "Analyzes pytest test results to identify patterns and suggest fixes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Memento", email = "claude.rc@gmail.com" },
]
keywords = ["pytest", "testing", "analysis", "reporting", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "anthropic",
    "mcp>=1.9.2",
    "openai",
    "pyyaml",
    "python-dotenv",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "clang-format",
    "isort",
    "mkdocs",
    "mypy",
    "pre-commit",
    "pre-commit-hooks",
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-json-report>=1.5.0",
    "ruff",
    "types-pyyaml",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-json-report>=1.5.0",
]

mcp = [
    "httpx>=0.24.0",
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    "httpx-sse>=0.3.0",
    "sse-starlette>=1.6.0",
    "typer>=0.9.0",
]

[project.scripts]
pytest-analyzer = "pytest_analyzer.cli.analyzer_cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/pytest_analyzer"
Repository = "https://github.com/yourusername/pytest_analyzer"
Issues = "https://github.com/yourusername/pytest_analyzer/issues"

[tool.hatch.version]
path = "src/pytest_analyzer/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
filterwarnings = ["ignore::DeprecationWarning", "ignore::pytest.PytestDeprecationWarning"]
addopts = "--quiet --cov=src/pytest_analyzer --cov-report=term-missing"
markers = [
    "e2e: mark test as an end-to-end test",
]

[tool.mypy]
mypy_path = ["src"]
explicit_package_bases = true
exclude = ["examples/*", "demo_script.py", "src/pytest_analyzer/core/di/*"]
python_version = "3.10"
ignore_errors = false

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "mcp.*", "httpx.*", "starlette.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
"pyyaml" = "*"
"rich" = ">=12.0.0"
python-dotenv = ">=1.1.0,<2"

[tool.pixi.pypi-dependencies]
# pytest-analyzer = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
mcp = { features = ["mcp"], solve-group = "default" }

[tool.pixi.tasks]
dev = "pip install -e ."
install-editable = "pip install -e ."
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
format = "ruff format src tests"
typecheck = "mypy src"
test = "pytest tests"
test-cov = { cmd = "pytest --cov=src/pytest_analyzer --cov-report=term-missing --cov-report=xml tests", depends-on = ["install-editable"] }
build = { cmd = "hatch build", depends-on = ["install-editable"] }
clean = "rm -rf dist build .ruff_cache .mypy_cache .pytest_cache *.egg-info src/pytest_analyzer.egg-info"
check-all = { depends-on = ["lint", "typecheck", "test"] }
setup-pre-commit = "pre-commit install --install-hooks"
