[project]
name = "hatch-example-project"
version = "0.1.0"
description = "A minimal Hatch project for pytest-analyzer detection."
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
  "pytest>=7.0",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args}"
